# goodconf

./: .gitignore  .pre-commit-config.yaml  .prettierrc.toml  .travis.yml  CHANGES.rst  LICENSE  Makefile  README.rst  file_or_env.py  pyproject.toml  renovate.json  setup.cfg  tox.ini
.github/workflows/: build.yml  pre-commit.yml  renovate-lockfile.yml  renovate.yml  test.yml
goodconf/: __init__.py  base.py  values.py
goodconf/contrib/: argparse.py  django.py
tests/: test_django.py  test_fields.py  test_file_helpers.py  test_files.py  test_goodconf.py  test_initial.py  test_values.py  utils.py
