[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[dependency-groups]
dev = [
  "goodconf[django,toml,yaml]",
  "mypy==2.1.*",
  "pytest-cov==7.1.*",
  "pytest-mock==3.15.*",
  "pytest==9.0.*",
]

[project]
authors = [
  {name = "Peter Baumgartner", email = "brett@python.org"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "pydantic-settings>=2.13",
  "pydantic>=2.7",
]
description = "Load configuration variables from a file or environment"
dynamic = ["version"]
keywords = ["env", "config", "json", "yaml", "toml"]
license = {file = "LICENSE"}
name = "goodconf"
readme = "README.rst"
requires-python = ">=3.10"

[project.optional-dependencies]
django = ["django>=5.2"]
toml = ["tomlkit>=0.11.6"]
yaml = ["ruamel.yaml>=0.17.0"]

[project.urls]
changelog = "https://github.com/lincolnloop/goodconf/blob/main/CHANGES.rst"
homepage = "https://github.com/lincolnloop/goodconf/"

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if t.TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]
skip_covered = true

[tool.coverage.run]
branch = true
disable_warnings = [
  "module-not-imported",
  "module-not-measured",
  "no-data-collected",
]
source = ["goodconf", "tests"]

[tool.hatch.build.hooks.vcs]
version-file = "goodconf/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.version]
source = "vcs"

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true

[[tool.mypy.overrides]]
# The pydantic.mypy plugin synthesises __init__ from model fields and ignores
# GoodConf's explicit __init__, so it flags load=/config_file= kwargs as
# unexpected. Suppress that here; it is a plugin limitation, not a real error.
disable_error_code = ["call-arg"]
disallow_untyped_defs = false
module = "tests.*"

[[tool.mypy.overrides]]
# Django ships no py.typed and we don't depend on django-stubs; the contrib
# shim only touches a couple of management-command symbols.
ignore_missing_imports = true
module = "django.*"

[tool.pytest.ini_options]
addopts = [
  "--cov",
  "--cov-report=term",
  "--cov-report=xml",
  "--junitxml=junit.xml",
  "--strict-markers",
]

[tool.ruff]
exclude = ["goodconf/_version.py"]

[tool.ruff.lint]
ignore = [
  # Permanently suppressed
  "ANN401",  # Dynamically typed expressions (typing.Any) — used deliberately
  "COM812",  # (ruff format) Checks for the absence of trailing commas
  "D",  # Missing or badly formatted docstrings
  "RUF012",  # Mutable class attributes https://github.com/astral-sh/ruff/issues/5243
]
select = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*" = [
  "PLR2004",  # Magic value used in comparison
  "S101",  # Use of `assert` detected
  "S105",  # Hardcoded password (test fixtures)
]

[tool.uv]
# Mirror Renovate's minimumReleaseAge cooloff for local/CI resolution.
exclude-newer = "7 days"
