[metadata]
name = goodconf
version = 0.8.0
description = Load configuration variables from a file or environment
long_description = file: README.rst
author = Peter Baumgartner
author_email = pete@lincolnloop.com
url = https://github.com/lincolnloop/goodconf/
keywords = env, config, json, yaml
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6


[options]
packages = find:

[options.extras_require]
yaml =
    ruamel.yaml
tests =
    pytest==3.5.0
    pytest-cov==2.5.1

[bdist_wheel]
universal=1
